First version of the Authors list
Added DI
Added UI related classes
Added some View extensions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Symphony</string>
+    <string name="no_data">Nothing to display for now</string>
 </resources>
