Updated loading cell style

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">Symphony</string>
 
+    <!-- Loading state -->
+    <string name="retry">Retry</string>
+
     <!-- Author detail -->
     <string name="author_list_no_data">There are no authors to display right now.\nCome back later.</string>
 
